--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,3 +19,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
+# MAILGUN
+mailgun.api.key=${MAILGUN_API_KEY}
+mailgun.domain.name=${MAILGUN_DOMAIN_NAME}
+mailgun.sender.email=${MAILGUN_SENDER_EMAIL}
