--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.config.import=file:.env.properties
+spring.config.import=optional:file:.env.properties
 spring.application.name=EduAtlas Affinity Report Backend
 # SERVER CONFIG
 server.port=${SERVER_PORT}
 # POSTGRESQL
 spring.datasource.username=${PG_USERNAME}
 spring.datasource.password=${PG_PASSWORD}
-spring.datasource.url=jdbc:postgresql://localhost:5432/${PG_DB_NAME}
+spring.datasource.url=${JDBC_URI:jdbc:postgresql://localhost:5432/eduatlas-affinity_report_db}
 spring.database.driver-class-name=org.postgresql.Driver
 # HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
