Update pom.xml and Cors configuration for swagger

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,6 +19,8 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
+# Tells Spring to use the X-Forwarded-Proto headers sent by Koyeb
+server.forward-headers-strategy=framework
 # MAILGUN
 mailgun.api.key=${MAILGUN_API_KEY}
 mailgun.domain.name=${MAILGUN_DOMAIN_NAME}
