--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.5</version>
+		<version>3.5.8</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ivancroce</groupId>
@@ -30,24 +30,19 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/com.konghq/unirest-object-mappers-gson -->
-		<dependency>
-			<groupId>com.konghq</groupId>
-			<artifactId>unirest-object-mappers-gson</artifactId>
-			<version>4.2.9</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.konghq/unirest-java-core -->
-		<dependency>
-			<groupId>com.konghq</groupId>
-			<artifactId>unirest-java-core</artifactId>
-			<version>4.5.0</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+			<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.8.13</version>
+			<version>2.8.14</version>
 		</dependency>
+        <!-- Manually forcing a secure version of commons-lang3 to fix CVE-2025-48924 -->
+        <!-- This overrides the old version pulled in by springdoc -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.18.0</version>
+        </dependency>
 		<!-- https://mvnrepository.com/artifact/com.konghq/unirest-object-mappers-gson -->
 		<dependency>
 			<groupId>com.konghq</groupId>
